# templater

./: Cargo.toml  readme.md
examples/: raylib-template.tplt
examples/raylib-template/: CMakeLists.txt
src/: cli.rs  main.rs
src/templater/: error.rs  mod.rs  template.rs
