[package]
name = "templr"
version = "0.1.0"
edition = "2021"

[dependencies]
# Error management
thiserror = "*"
anyhow = "*"
# Storage, Serialization, Parsing, Compression
serde = { version = "*", features = ["derive"] }
serde_json = "*"
sled = { version = "*", features = ["compression"] }
tar = "*"
flate2 = "*"
walkdir = "*"
dirs = "*"
globset = "*"
# Nice output, input, logging
clap = { version = "*", features = ["derive"] }
log = "*"
colog = "*"
prettytable-rs = "*"
pretty-bytes = "*"
chrono = "*"
dialoguer = "*"
tempfile = "*"
