[package]
name = "templater"
version = "0.1.2"
edition = "2021"

[dependencies]
# Error management
thiserror = "1.0.63"
anyhow = "1.0.86"
# Storage, Serialization, Parsing, Compression
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
sled = { version = "0.34.7", features = ["compression"] }
tar = "0.4.41"
flate2 = "1.0.30"
walkdir = "2.5.0"
dirs = "5.0.1"
globset = "0.4.14"
# Nice output, input, logging
clap = { version = "4.5.13", features = ["derive"] }
log = "0.4.22"
colog = "1.3.0"
prettytable-rs = "0.10.0"
pretty-bytes = "0.2.2"
chrono = "0.4.38"
dialoguer = "0.11.0"
tempfile = "3.11.0"
